[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.rocket]
rocket = "0.5.0-rc.1"
features = ["json"]

[dependencies.serde]
version = "1.0.136"
features = ["derive"]